[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprite Sheets/Player/Avatar.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Player Constants/WalkConstants.tres" type="Resource" id=3]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": false,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 15 )

[node name="Player" type="KinematicBody2D"]
position = Vector2( 0, -16 )
collision_layer = 2
script = ExtResource( 2 )
playerConstants = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 0, -92 )
current = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
z_index = 10
frames = SubResource( 2 )
animation = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 1 )

[node name="LadderRays" type="Node2D" parent="."]

[node name="LadderClimbUp" type="RayCast2D" parent="LadderRays"]
position = Vector2( 0, -1 )
scale = Vector2( 1, -1 )
enabled = true
cast_to = Vector2( 0, 13 )
collide_with_areas = true
collide_with_bodies = false

[node name="LadderClimbDown" type="RayCast2D" parent="LadderRays"]
position = Vector2( 0, 18 )
scale = Vector2( 1, -1 )
enabled = true
cast_to = Vector2( 0, 1 )
collide_with_areas = true
collide_with_bodies = false

[node name="LadderJumpDown" type="RayCast2D" parent="LadderRays"]
position = Vector2( 0, 16 )
cast_to = Vector2( 0, 16 )

[node name="WallBehind" type="RayCast2D" parent="LadderRays"]
position = Vector2( 0, -14 )
cast_to = Vector2( 0, 30 )
